# prgs-rustland-gamedata-gameplaypgnd-rcss2d

./: Cargo.toml  Makefile  README.rst
gamedata/: 20221118233608-tm01_3-vs-tm02_1.virtball.csv  simball01.csv
src/: keys.rs  main.rs  rcg.rs  sdlx.rs  testlib.rs
src/entities/: gentity.rs  mod.rs  objects.rs  simobjs.rs  team.rs
src/entity/: mod.rs
src/playdata/: mod.rs  random.rs  rcg.rs  rclive.rs  rcss.rs
src/proc/: actions.rs  mod.rs  passes.rs
