[package]
name = "playbackpgnd"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inbetween_frames = []

[dependencies]
sdl2 = { version="0.35.2", features = ["gfx", "ttf"] }
rand = "0.8.5"
tokensk = { git="https://github.com/hanishkvc/prgs-rustland-libs-tokensk" }
#tokensk = { path="../../tokensk" }
loggerk = { git="https://github.com/hanishkvc/prgs-rustland-libs-loggerk" }

