[package]
name = "gameplaypgnd-rcss2d"
version = "0.1.7"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# The program generated interpolated inbetween frames. [off by default]
# Helps with visual playback of the game data, if the play data source has less frequent game data.
inbetween_frames = []

[dependencies]
sdl2 = { version="0.35.2", features = ["gfx", "ttf"] }
rand = "0.8.5"
tokensk = { git="https://github.com/hanishkvc/prgs-rustland-libs-tokensk" }
#tokensk = { path="../../tokensk" }
loggerk = { git="https://github.com/hanishkvc/prgs-rustland-libs-loggerk" }
argsclsk = { git="https://github.com/hanishkvc/prgs-rustland-libs-argsclsk" }
datautilsk = { path="../../datautilsk" }

